fix: fixed scrollbar issues

--- a/src/app/dashboard/modules/client-dashboard/components/add-remark-modal/add-remark-modal.scss
+++ b/src/app/dashboard/modules/client-dashboard/components/add-remark-modal/add-remark-modal.scss
@@ -108,3 +108,7 @@ form {
   font-weight: bold;
   margin-left: 0.25rem;
 }
+
+.enable-scroll {
+  overflow-y: scroll !important; 
+}
